@@ -6,4 +6,11 @@ set -e
     --clear-groups \
     --reuid snap_daemon \
     --regid snap_daemon -- \
-    ${OPENSEARCH_BIN}/${bin_script} "${@}"
+    "${JAVA_HOME}"/bin/java \
+    -Xms256m -Xmx256m \
+    -Xshare:auto \
+    -Djava.security.manager=allow \
+    -cp "${OPENSEARCH_LIB}/*" \
+    -Dopensearch.path.home="${OPENSEARCH_HOME}" \
+    -Dopensearch.path.conf="${OPENSEARCH_PATH_CONF}" \
+    org.opensearch.bootstrap.OpenSearch "${@}"
